src/objects/GDPR_Notification__c/GDPR_Notification__c.object-meta.xml
<CustomObject>
    <label>GDPR Email Notification</label>
    <nameField>
        <displayFormat>GE-{0000}</displayFormat>
        <label>GDPR Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>