src/objects/GDPR_Notification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GDPR Email Notifications</relationshipLabel>
    <relationshipName>GDPR_Email_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>